--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -38,6 +38,8 @@ $browser-context: 16;
     #advantage .inner_grid 
         blockquote
             width: 40%;
+    .text_seats>a
+        top: 20px;
     .discount_form
         right: -5%;
     .slider_set.active 
@@ -54,36 +56,36 @@ $browser-context: 16;
         max-width: 90%;
     .networks
         width: 200px;
+        ul li:not(:first-child)
+            margin-left: 20px;
     .booking
 	    right: 5%;
+    #advantage.wrap
+        max-width: 100%;
     #advantage .inner_grid 
-        flex-flow: row wrap;            
-        blockquote
-            width: 100%;                
-            height: 15%;
-            p
-				top: 40%;
-				font-size: em(50);
-				&:before, &:after	
-					height: 54px;
-					font-size: em(44);
-				&:before
-					// margin-top: -25px;
-					// margin-left: 65px;
-					line-height: 54px;
-				&:after
-					margin-top: 30px;
-					// line-height: 61px;
-				span
-					width: 60px; 
-    // .inner_wrapper
-    //         width: 100%;
-    //         height: 80%;
-    //         display: flex;
-    //         flex-flow: column wrap;
-    //         align-items: space-between;
-    //         justify-content: space-between;	
-    //         padding: 40px;
+            flex-flow: row wrap; 
+            height: 750px; 
+            width: 545px;          
+            blockquote
+                width: 100%;                
+                height: 15%;
+                p
+                    top: 5%;
+                    font-size: em(45);
+                    &:before, &:after	
+                        height: 54px;
+                        font-size: em(40);
+                    &:before
+                        // margin-top: -25px;
+                        // margin-left: 65px;
+                        line-height: 54px;
+                    &:after
+                        margin-top: 30px;
+                        // line-height: 61px;
+                    span
+                        width: 60px; 
+    .inner_wrapper            	
+            padding: 0px;
     // &>div
     //     .picture				
     //         display: inline-block;				
@@ -93,21 +95,9 @@ $browser-context: 16;
     //         .who_pictogram
     //             height: 50px;
         
-    //     .text
-    //         display: inline-block;
-    //         width: 180px;
-    //         padding: 0 0 10px 20px;
-    //         position: relative;
-    //         font-size: em(16);
-    //         line-height: 1.2;
-    //         font-weight: 500;
-    //         &:before
-    //             content: '';
-    //             position: absolute;
-    //             border-left: 1px solid #6a6a6a;
-    //             height: 130px;
-    //             bottom: -10px;
-    //             left: 10px;
+        .text   
+            &:before   
+                left: 8px;
     //         &:after
     //             content: '';
     //             position: absolute;
@@ -121,18 +111,27 @@ $browser-context: 16;
 
     /* OUR OFFICES */
     .article
-        width: 45%;
+        width: 55%;
         h3:after
             margin: 0;
     .text_seats
         &>p, &>a
             font-size: em(22);
+    .seats_50
+	    background: linear-gradient(to right, rgba(0,0,0, 0) 20%, rgba($orange, 0.9) 50%), url("../img/50_seats.png") top right no-repeat
+    .seats_20
+        background: linear-gradient(to left, rgba(0,0,0, 0) 20%, rgba($burgundy, 0.9) 50%), url("../img/20_seats.png") top right no-repeat
+    .seats_6
+        background: linear-gradient(to right, rgba(0,0,0, 0) 20%, rgba($blue, 0.9) 50%), url("../img/6_seats.png") top right no-repeat
+
     .girl img
         left: 0;
     .discount_form
         z-index: 15;
         right: -3%;
     .space, .computers, .offices, .customers 
+        p:first-child
+            font-size: em(54);
         h3:after
             margin: 0;
             
@@ -153,7 +152,8 @@ $browser-context: 16;
                 width: 100%;
             p
                 width: 100%;
-
+    #details.wrap
+        max-width: 100%;
     #details
         background: linear-gradient(to top, rgba($mainBackground, 1)15px, rgba(0,0,0, 0)20%), url(../img/details_background.png) no-repeat center top;
 
@@ -203,7 +203,7 @@ $browser-context: 16;
 
 
 @media only screen and (max-width: 768px)
-    .menu, .address, .phone, .networks 
+    .menu, .address, .networks 
         display: flex;
         align-items: center;
         &>img
@@ -215,8 +215,55 @@ $browser-context: 16;
         width: 120px;
         ul img
             height: 20px;
+    .phone
+        display: none;
+    #advantage
+        height: 125vh;
+        min-height: 1080px;
+        margin-bottom: 0;
+        background: url("../img/advantage.png") no-repeat center top;       
+        .inner_grid
+            flex-flow: row wrap;
+            padding: 40px 0 30px;
+            height: 80vh;
+            width: 90%;            	
+            blockquote					
+                width: 100%;                
+                height: 13%;                		
+                p
+                    top: 20%;                    
+                    font-size: em(28);
+                    font-weight: 800;
+                    text-align: center;
+                    &:before, &:after	
+                        height: 20px;
+                        font-size: em(28);                        
+                    &:before                        
+                        line-height: 20px;                   
+                    span                        
+                        width: 40px;            
+            .inner_wrapper
+                width: 100%;
+                height: 100%;                
+                flex-flow: column;
+                align-items: center;                
+                padding-left: 0;
+                padding-top: 5%;                 
+            &>div                             
+                .picture				
+                    width: 70px;
+                    height: 120px;
+                    .who_pictogram
+                        height: 60px;                
+                .text
+                    width: 60vw;
+                    font-size: em(18);
+                    &:before                       
+                        height: 90px;  
+                .right
+                    width: 60vw;
     .article
-        width: 53%;
+        width: 100%;
         h3
             font-size: em(32);
             width: 320px;
@@ -227,7 +274,14 @@ $browser-context: 16;
             margin: 0;
     .text_seats
         &>p, &>a
-            font-size: em(20);
+            font-size: em(26);
+    .seats_50
+	    background: linear-gradient(to right, rgba(0,0,0, 0) 0%, rgba($orange, 0.8) 0%), url("../img/50_seats.png") top right no-repeat
+    .seats_20
+        background: linear-gradient(to left, rgba(0,0,0, 0) 0%, rgba($burgundy, 0.8) 0%), url("../img/20_seats.png") top right no-repeat
+    .seats_6
+        background: linear-gradient(to right, rgba(0,0,0, 0) 0%, rgba($blue, 0.8) 0%), url("../img/6_seats.png") top right no-repeat
+
     .girl img
         display: none;
 
@@ -379,25 +433,28 @@ $browser-context: 16;
              
     
     #details .frame
-        width: 100%;       
+        border: none; 
+    #gift.wrap 
+        max-width: 100%;      
             
 
     .park, .market, .MC, .coffee_life
         // display: none;
     #location .frame 
+        height: 100%;
         h3
             width: 125px;
             font-size: em(16);
         h3:after, h3:before
             // border: none;
-    #open_1969
-        top: 350px; 
-        &:after
-            height: 180px;
-        h3:after
-            top: 203px;
-        h3:before
-            top: 178px;
+    // #open_1969
+    //     top: 350px; 
+    //     &:after
+    //         height: 180px;
+    //     h3:after
+    //         top: 203px;
+    //     h3:before
+    //         top: 178px;
 
     footer
         h3
@@ -450,50 +507,9 @@ $browser-context: 16;
             button			
                 padding: 10px 40px;
                 font-size: em(28);
-    #advantage
-        height: 125vh;
-        margin-bottom: 0;
-        background: url("../img/advantage.png") no-repeat center top;       
-        .inner_grid
-            flex-flow: row wrap;
-            padding: 40px 0 30px;
-            height: 80vh;
-            width: 90%;            	
-            blockquote					
-                width: 100%;                
-                height: 13%;                		
-                p
-                    top: 20%;                    
-                    font-size: em(28);
-                    font-weight: 800;
-                    text-align: center;
-                    &:before, &:after	
-                        height: 20px;
-                        font-size: em(28);                        
-                    &:before                        
-                        line-height: 20px;                   
-                    span                        
-                        width: 40px;            
-            .inner_wrapper
-                width: 100%;
-                height: 100%;                
-                flex-flow: column;
-                align-items: center;                
-                padding-left: 0;
-                padding-top: 5%;                 
-            &>div                             
-                .picture				
-                    width: 70px;
-                    height: 120px;
-                    .who_pictogram
-                        height: 60px;                
-                .text
-                    width: 60vw;
-                    font-size: em(18);
-                    &:before                       
-                        height: 90px;  
-                .right
-                    width: 60vw;  
+    .scroll_down
+        bottom: 7%;
+    
     .article
         width: 100%;
         text-align: center;
@@ -709,7 +725,8 @@ $browser-context: 16;
         .right
             width: 150px; 
     #gift
-        height: 495px;
+        min-height: 493px;
+        max-height: 493px;
         background: url(../img/join_background_black.png) no-repeat center center;
         img
             display: none;
